Create timeline sidebar

--- a/src/static/scss/components/_save-message.scss
+++ b/src/static/scss/components/_save-message.scss
@@ -1,36 +1,49 @@
 .save-message {
+  font-size: $font-size-mili;
+
   position: fixed;
   z-index: 1;
+  right: 5rem;
   bottom: 0;
-  left: 0;
 
   display: flex;
   align-items: center;
 
-  padding: 1.5rem;
-  color: $color-gray;
-  font-size: $font-size-mili;
+  padding: 1rem;
 
-  &.-saving {
-    & > .message {
-      transform: translateY(calc(100% + 1.5rem));
-      opacity: 0;
-    }
-    & > .-saving {
-      transform: translateY(0);
-      opacity: 1;
-    }
+  transition: transform .25s $swift-out;
+  transform: translateX(0);
+  text-align: right;
+
+  color: $color-gray;
+
+  &.-saving > .message {
+    transform: translateY(calc(100% + 1.5rem));
+
+    opacity: 0;
+  }
+
+  &.-saving > .-saving {
+    transform: translateY(0);
+
+    opacity: 1;
   }
 
   & > .message {
+    display: flex;
+    flex-direction: column;
+
+    transition: opacity .35s ease-in-out;
     transform: translateY(0);
+
     opacity: 1;
-    transition: transform .5s ease-in-out, opacity .35s ease-in-out;
-  }
-  & > .-saving {
-    position: absolute;
-    opacity: 0;
-    transform: translateY(calc(100% + 1.5rem));
   }
 
+  & > .-saving {
+    position: absolute;
+
+    transform: translateY(calc(100% + 1.5rem));
+
+    opacity: 0;
+  }
 }
