--- a/src/static/scss/components/_tool-bar.scss
+++ b/src/static/scss/components/_tool-bar.scss
@@ -41,10 +41,11 @@
 
       &::after {
         font-weight: 400 !important;
+        background-color: rgba(#FFF, .95);
       }
 
       &.-active {
-        > svg path {
+         > svg path {
           fill: $color-brand;
         }
       }
