--- a/src/templates/pages/clusters-document.html
+++ b/src/templates/pages/clusters-document.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-<main class="document-editor -readonly -active js-documentEditor" data-document-id="{{ object.id }}">
+<main class="document-editor -active js-documentEditor" data-document-id="{{ object.id }}">
   {% include "components/side-bar.html" %}
   <article>
     <header>
