--- a/src/static/scss/ambience/_colors.scss
+++ b/src/static/scss/ambience/_colors.scss
@@ -9,6 +9,7 @@ $color-red: #EB6767;
 $color-highlight: #FD6;
 $color-highlight-on-white: #FFEEB2;
 $color-whisper: #F5F6FA;
+$color-blueish: #68C0FF;
 
 
 // Social colors
