--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -60,6 +60,7 @@
 @import 'components/link-back';
 @import 'components/error-list';
 @import 'components/save-message';
+@import 'components/version-timeline';
 
 // Vendor
 @import 'vendor/tooltip';
