--- a/src/templates/components/cluster-sidebar.html
+++ b/src/templates/components/cluster-sidebar.html
@@ -3,7 +3,6 @@
     <h3>Grupos de Opiniões Similares</h3>
     <div class="filter"></div>
   </div>
-  <div class="clusters js-clusters">
-  </div>
+  <div class="clusters js-clusters"></div>
   <div class="toggle js-toggleButton"></div>
 </aside>
