Refactor simple-card [WIP]

--- a/src/static/scss/components/_dashboard-list.scss
+++ b/src/static/scss/components/_dashboard-list.scss
@@ -67,7 +67,7 @@
       grid-auto-rows: minmax(347px, 1fr);
     }
 
-    & > .simple-card {
+    & > .document-card {
       margin-top: 1.5rem;
 
       @include bp-smallup {
