--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -22,7 +22,7 @@
 @import 'components/nav-burger';
 @import 'components/nav-menu';
 @import 'components/projects-list';
-@import 'components/simple-card';
+@import 'components/document-card';
 @import 'components/voting-action';
 @import 'components/app-button';
 @import 'components/text-highlight';
