--- a/src/templates/pages/dashboard.html
+++ b/src/templates/pages/dashboard.html
@@ -15,36 +15,63 @@
   <input class="search js-search" type="text" placeholder="Buscar">
 
   <div class="list">
-    <a href="{% url 'new_document' %}" class="simple-card -new">
+    <a href="{% url 'new_document' %}" class="document-card -new">
       <span class="icon" aria-label="Adicionar projeto"></span>
     </a>
 
     {% for document in object_list %}
-    <a href="{% url 'document_editor_cluster' template='editor' pk=document.id %}" class="simple-card">
-      <h3 class="js-title">{{ document.title }}</h3>
-      <p class="js-description">{{ document.description }}</p>
-      <div class="info">
-        <div class="themes">
+      <div href="{% url 'document_editor_cluster' template='editor' pk=document.id %}" class="document-card -owner {% if document|has_group %}-public{% endif %}">
+
+        <ul class="tags">
+
+          {% if document|has_public_group %}
+            <li class="app-tag">
+              <img src="{% static 'img/public.svg' %}" alt="">
+              <span>Público</span>
+            </li>
+          {% endif %}
+
+          {% if document|count_private_groups > 0  %}
+            <li class="app-tag">
+              <img src="{% static 'img/padlock.svg' %}" alt="">
+              <span>{{ document|count_private_groups }} {% if document|count_private_groups == 1  %}Privado{% else %}Privados{% endif %}</span>
+            </li> 
+          {% endif %}
+
+          <li class="app-tag">
+            <img src="{% static 'img/given-opinions.svg' %}" alt="">
+            <span>76 Sugestões</span>
+          </li>
+        </ul>
+
+        <ul class="tags">
           {% for theme in document.themes.all %}
-          <div class="theme">
-            {% if theme.icon %}
-            <img src="{{ theme.icon.url }}" alt="{{ theme.slug }}">
-            {% endif %}
+          <li class="app-tag -theme" style="background-color: {{ theme.color }}">
             <span>{{ theme.name }}</span>
-          </div>
+          </li>
           {% endfor %}
-        </div>
-        <div class="suggestions">
-          <div class="suggestion">
-            <span class="value">{{document.invited_groups.all.count}}</span>
-            <span>Grupos</span>
+        </ul>
+
+        <h3 class="js-title">{{ document.title }}</h3>
+
+        <p class="js-description">
+          {{ document.description }}
+        </p>
+
+        <div class="footer">
+          <div class="actions">
+            <a href="">Minhas versões</a>
+            {% if document|has_group %}        
+              <a href="">Ver participação</a>
+            {% endif %}
           </div>
         </div>
+
       </div>
-    </a>
+
     {% endfor %}
 
-    <a href="" class="simple-card">
+    <a href="" class="document-card -public">
 
       <ul class="tags">
         <li class="app-tag">
@@ -78,11 +105,114 @@
           <span class="begin"><span>3</span> dias atrás</span>
           <span class="end">Encerra em <span>15</span> dias</span>
           <div class="progress-bar">
-            <span class="value"></span>
+            <span class="value" style="transform: scaleX(.3)"></span>
           </div>
         </div>
         
         <span class="pseudolink">Acessar</span>
+      </div>
+
+    </a>
+
+
+    <div href="" class="document-card -public -owner">
+
+      <ul class="tags">
+        <li class="app-tag">
+          <img src="{% static 'img/public.svg' %}" alt="">
+          <span>Público</span>
+        </li>
+        <li class="app-tag">
+          <img src="{% static 'img/padlock.svg' %}" alt="">
+          <span>7 Privado</span>
+        </li>
+        <li class="app-tag">
+          <img src="{% static 'img/given-opinions.svg' %}" alt="">
+          <span>76 Sugestões</span>
+        </li>
+      </ul>
+
+      <h3 class="js-title">Patrocínio de bancos públicos a clubes de futebol</h3>
+
+      <p class="js-description">
+        Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.
+      </p>
+
+      <div class="footer">
+        <div class="actions">
+          <a href="">Minhas versões</a>
+          <a href="">Ver participação</a>
+        </div>
+      </div>
+
+    </div>
+
+
+
+    <a href="" class="document-card -onhold">
+
+      <ul class="tags">
+        <li class="app-tag -theme">
+          <span>Educação</span>
+        </li>
+        <li class="app-tag -theme">
+          <span>Educação</span>
+        </li>
+        <li class="app-tag -theme">
+          <span>Educação</span>
+        </li>
+      </ul>
+
+      <h3 class="js-title">Patrocínio de bancos públicos a clubes de futebol</h3>
+
+      <p class="js-description">
+        Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.
+      </p>
+
+      <div class="footer">
+        <div class="status">
+          <p class="closed">Encerrado em 12/04/2019</p>
+          <div class="feedback-status">
+            <img src="{% static 'img/hourglass.svg' %}" alt="">
+            <p class="-onhold">Aguardando feedback do deputado</p>
+          </div>
+        </div>
+        
+        <span class="pseudolink">Ver</span>
+      </div>
+
+    </a>
+
+    <a href="" class="document-card -closed">
+
+      <ul class="tags">
+        <li class="app-tag -theme">
+          <span>Educação</span>
+        </li>
+        <li class="app-tag -theme">
+          <span>Educação</span>
+        </li>
+        <li class="app-tag -theme">
+          <span>Educação</span>
+        </li>
+      </ul>
+
+      <h3 class="js-title">Patrocínio de bancos públicos a clubes de futebol</h3>
+
+      <p class="js-description">
+        Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.
+      </p>
+
+      <div class="footer">
+        <div class="status">
+          <p class="closed">Encerrado em 12/04/2019</p>
+          <div class="feedback-status">
+            <img src="{% static 'img/feedback.svg' %}" alt="">
+            <p class="">Confira o feedback do deputado</p>
+          </div>
+        </div>
+        
+        <span class="pseudolink">Ver</span>
       </div>
 
     </a>
