Add feedback status

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -41,6 +41,7 @@
 @import 'components/theme-tag';
 @import 'components/app-tag';
 @import 'components/document-progress';
+@import 'components/feedback-status';
 @import 'components/progress-bar';
 @import 'components/section-group';
 @import 'components/input-profile';
