--- a/src/static/scss/components/_progress-bar.scss
+++ b/src/static/scss/components/_progress-bar.scss
@@ -14,9 +14,7 @@
     width: 100%;
     height: 100%;
 
-    transition: transform 1s ease-in-out;
-    transform: scaleX(0);
-    transform: scaleX(.85);
+    transition: transform 1s $swift-out;
     transform-origin: left;
     animation: moving-gradient 4s linear infinite;
 
