Add orange color

--- a/src/static/scss/ambience/_colors.scss
+++ b/src/static/scss/ambience/_colors.scss
@@ -5,6 +5,7 @@ $color-brand: #2DA965;
 $color-deep-gray: #474747;
 $color-grayish: #D0D0D0;
 $color-gray: #949494;
+$color-orange: #FF7700;
 $color-red: #EB6767;
 $color-highlight: #FD6;
 $color-highlight-on-white: #FFEEB2;
