--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -60,6 +60,7 @@
 <script src="{% static 'js/components/documentEditor/view.js' %}"></script>
 <script src="{% static 'js/components/toolBar/controller.js' %}"></script>
 <script src="{% static 'js/components/toolBar/view.js' %}"></script>
+<script src="{% static 'js/components/timelineSidebar/view.js' %}"></script>
 <script src="{% static 'js/components/contextualToolbar/view.js' %}"></script>
 <script src="{% static 'js/components/navBar/view.js' %}"></script>
 <script src="{% static 'js/pages/editDocument.js' %}"></script>
