--- a/src/templates/components/public-participation-modal.html
+++ b/src/templates/components/public-participation-modal.html
@@ -3,6 +3,11 @@
 
 
 {% block extra_classes %}-public js-publicFormModal{% endblock %}
+{% block extra_attributes %}
+{% if group.public_participation %}
+    data-group-id="{{ group.id }}"
+{% endif %}
+{% endblock %}
 
 {% block title_modal %}
 
@@ -10,11 +15,15 @@
 
 {% block content %}
 <form>
-<h1>Data de encerramento</h1>
+<h1 class="js-titleModal">Data de encerramento</h1>
 <p>Analise os projetos de lei e contribua com sugestões de nova redação a artigos ou parágrafos.</p>
 <ul class="errorlist nonfield js-formError"></ul>
 <div class="input-text -date -required">
+  {% if group.public_participation %}
+  <input type="date" name="date" class="js-closingDate" required maxlength="200" value="{{group.closing_date|date:'Y-m-d'}}" id="id_date">
+  {% else %}
   <input type="date" name="date" class="js-closingDate" required maxlength="200" id="id_date">
+  {% endif %}
   <label for="id_date">Data de encerramento</label>
 </div>
 <div class="input-text -congressman js-congressman -required" data-api-url="{{api_url}}" data-legislature="{{legislature}}">
