--- a/src/templates/emails/congressman_authorization.html
+++ b/src/templates/emails/congressman_authorization.html
@@ -1,6 +1,6 @@
 {% if updated %}
-<p>O consultor {{ document_owner }} deseja alterar a data de encerramento do documento {{ document_title }} para {{ closing_date }}.</p>
+<p>O consultor {{ document_owner }} deseja alterar a data de encerramento do documento {{ document_title }} para {{ closing_date|date:'d/m/Y' }}.</p>
 {% else %}
-<p>O consultor {{ document_owner }} deseja abrir o documento {{ document_title }} para consulta pública até {{ closing_date }}.</p>
+<p>O consultor {{ document_owner }} deseja abrir o documento {{ document_title }} para consulta pública até {{ closing_date|date:'d/m/Y' }}.</p>
 {% endif %}
 <a href="{{ site_url }}{% url 'public-authorization' hash_id %}">Concordo!</a>
