Create named version on click at toolbar
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/components/tool-bar.html
+++ b/src/templates/components/tool-bar.html
@@ -1,6 +1,6 @@
 <aside class="tool-bar js-toolBar">
   <div class="tools">
-    <a href="#" class="icon js-saveButton" aria-label="Salvar">
+    <a href="#" class="icon js-saveButton" aria-label="Criar versão">
       {% include "svgs/cloud-icon.html" %}
     </a>
     <a href="#" class="icon" aria-label="Exportar">
