--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -38,6 +38,7 @@
 {% include "components/validate-modal.html" %}
 {% include "components/public-participation-modal.html" %}
 {% include "components/participation-info-modal.html" %}
+{% include "components/save-modal.html" %}
 
 {% endblock content %}
 
@@ -52,6 +53,7 @@
 <script src="{% static '/js/vendor/silegismg-editor-articulacao-plain-js-polyfill.js' %}"></script>
 <script src="{% static '/js/components/infoMessage/view.js' %}"></script>
 <script src="{% static '/js/components/saveMessage/view.js' %}"></script>
+<script src="{% static '/js/components/saveModal/view.js' %}"></script>
 <script src="{% static '/js/components/documentEditor/controller.js' %}"></script>
 <script src="{% static '/js/components/documentEditor/view.js' %}"></script>
 <script src="{% static '/js/components/toolBar/controller.js' %}"></script>
