--- a/src/templates/components/document-editor.html
+++ b/src/templates/components/document-editor.html
@@ -10,7 +10,7 @@
   {% include "components/contextual-toolbar.html" %}
   <div tabindex="1" class="js-textEditor"></div>
   <div class="save-message js-saveMessage">
-    <span class="message">Atualizado em <span class="js-timestamp">{{object.versions.first.created|date:'d/m/Y à\s H:i'}}</span></span>
+    <span class="message">Atualizado em <span class="js-timestamp">{{object.versions.first.created|date:'d/m/Y à\s H\hi'}}</span></span>
     <span class="message -saving">Salvando</span>
   </div>
 </article>
