--- a/src/static/scss/components/_document-editor.scss
+++ b/src/static/scss/components/_document-editor.scss
@@ -1,12 +1,13 @@
-.document-editor.-readonly.-active {
-  width: calc(100% - 29rem);
+.document-editor.-active {
+  width: calc(100% - 11rem);
+  padding-left: 27rem;
 
   & > .side-bar {
     transform: translateX(0);
+  }
 
-    & > .toggle::before {
-      transform: rotate(180deg);
-    }
+  & > .side-bar > .toggle::before {
+    transform: rotate(180deg);
   }
 }
 
@@ -43,81 +44,79 @@
   }
 
   & > article {
-    font-size: 1rem;
-
     box-sizing: border-box;
     width: 100%;
     max-width: 66ch;
     margin: 0 auto;
     padding: 2rem 1.6rem 5rem 1.6rem;
 
-    & > p {
-      position: relative;
-    }
+    font-size: 1rem;
+  }
 
-    & > header {
-      position: relative;
+  & > article > p {
+    position: relative;
+  }
 
-      display: flex;
-      flex-direction: column;
+  & > article > header {
+    position: relative;
 
-      & > .date {
-        font-size: $font-size-mili;
-        font-weight: 500;
+    display: flex;
+    flex-direction: column;
+  }
 
-        color: $color-deep-gray;
+  & > article > header > .date {
+    color: $color-deep-gray;
 
-        &.-inactive {
-          color: $color-red;
-        }
+    font-size: $font-size-mili;
+    font-weight: 500;
+  }
 
-        &.-active {
-          color: $color-brand;
-        }
-      }
+  & > article > header > .date.-inactive {
+    color: $color-red;
+  }
 
-      &.-editable {
-        & > h1 {
-          min-height: 52px;
-        }
+  & > article > header > .date.-active {
+    color: $color-brand;
+  }
 
-        & > .description {
-          min-height: 52px;
-          margin-bottom: 2rem;
-        }
+  & > article > header > .-editable > h1 {
+    min-height: 52px;
+  }
 
-        & > textarea {
-          padding: 0;
+  & > article > header > .-editable > .description {
+    min-height: 52px;
+    margin-bottom: 2rem;
+  }
 
-          box-shadow: none;
+  & > article > header > .-editable > textarea {
+    padding: 0;
 
-          &.title {
-            @extend h1;
+    box-shadow: none;
+  }
 
-            margin: 0;
-            margin-top: 1rem;
-          }
+  & > article > header > .-editable > textarea.title {
+    margin: 0;
+    margin-top: 1rem;
 
-          &.description {
-            line-height: 1.6;
-          }
-        }
+    @extend h1;
+  }
 
-        & > hr {
-          margin-top: 0;
-        }
-      }
-    }
+  & > article > header > .-editable > textarea.description {
+    line-height: 1.6;
+  }
 
-    & > header > hr {
-      margin-bottom: 0;
-    }
+  & > article > header > .-editable > textarea > hr {
+    margin-top: 0;
+  }
 
-    & > header > .description {
-      font-size: 1.25rem;
-      font-weight: 300;
+  & > article > header > hr {
+    margin-bottom: 0;
+  }
 
-      margin-top: 1rem;
-    }
+  & > article > header > .description {
+    margin-top: 1rem;
+
+    font-size: 1.25rem;
+    font-weight: 300;
   }
 }
