Create compare checkbox

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -63,6 +63,7 @@
 @import 'components/version-timeline';
 @import 'components/dropdown-menu';
 @import 'components/breadcrumb-menu';
+@import 'components/compare-checkbox';
 
 // Vendor
 @import 'vendor/tooltip';
