Improve checkbox style

--- a/src/static/scss/components/_side-bar.scss
+++ b/src/static/scss/components/_side-bar.scss
@@ -47,7 +47,7 @@
       @include icon('filter');
     }
 
-    & > .compare {
+    & > .action {
       font-size: $font-size-micro;
 
       cursor: pointer;
