--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -12,7 +12,7 @@
     <p class="description">{{ object.description }}</p>
     <hr>
   </header>
-  {% for excerpt in object.get_excerpts %}
+  {% for excerpt in group.get_excerpts %}
     {% if excerpt.excerpt_type.align_center %}
     <div class="excerpt-wrapper {% excerpt_classes excerpt%}">
       <h3>{% excerpt_numbering excerpt %}</h3>
